--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 /node_modules/.cache
+/dist
 
 # testing
 /coverage
@@ -23,8 +24,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.eslintrc.js
-.prettierrc.json
 .env
-tslint.json
-.eslintrc.json
